[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/endscreen/game over.png" type="Texture" id=1]
[ext_resource path="res://assets/endscreen/restart-quit.png" type="Texture" id=2]
[ext_resource path="res://scenes/End.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/win.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/endscreen/chayanne.png" type="Texture" id=5]

[node name="GameOver" type="Control"]
anchor_left = -0.008
anchor_right = -0.008
margin_left = 0.0480001
margin_right = 303.048
margin_bottom = 239.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -1.0
margin_top = -4.0
margin_right = 305.0
margin_bottom = 247.0

[node name="Chayanne" type="Sprite" parent="."]
position = Vector2( 238, 173 )
scale = Vector2( 0.275355, 0.21181 )
texture = ExtResource( 5 )

[node name="GameOver" type="Sprite" parent="."]
position = Vector2( 133, 100 )
scale = Vector2( 0.368, 0.368 )
texture = ExtResource( 1 )

[node name="Restart-quit" type="Sprite" parent="."]
position = Vector2( 129, 205 )
scale = Vector2( 0.406, 0.406 )
texture = ExtResource( 2 )

[node name="restart_bttn" type="Button" parent="."]
margin_left = 26.0
margin_top = 195.0
margin_right = 127.0
margin_bottom = 215.0
flat = true

[node name="quit_bttn" type="Button" parent="."]
margin_left = 170.0
margin_top = 195.0
margin_right = 230.0
margin_bottom = 215.0
flat = true

[node name="is_rescued" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -3.714

[connection signal="pressed" from="restart_bttn" to="." method="_on_restart_bttn_pressed"]
[connection signal="pressed" from="quit_bttn" to="." method="_on_quit_bttn_pressed"]
